started working on a binary tree

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,5 @@
 project('rpncalc', 'c')
 src = ['main.c', 'state.c', 'util.c']
-executable('rpncalc', src)
+cc = meson.get_compiler('c')
+deps = cc.find_library('m', required : true)
+executable('rpncalc', src, dependencies : deps)
