replaced if else chain, TODO: bsearch

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('rpncalc', 'c')
-src = ['main.c', 'state.c', 'util.c']
+src = ['main.c', 'state.c', 'util.c', 'cmds.c']
 cc = meson.get_compiler('c')
 deps = cc.find_library('m', required : true)
 executable('rpncalc', src, dependencies : deps)
